created voting - added classes in style.css - added new functional - added route for voting

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2054,3 +2054,36 @@ textarea::-webkit-scrollbar-thumb {
 .input7-size{
 	min-width: 176px;
 }
+
+.gray-button {
+    background-color: #EEE;
+    cursor: pointer;
+    transition: 0.4s ease;
+}
+
+.gray-button:hover {
+    background-color: #D2D2D2;
+}
+
+.custom-blue-button {
+    cursor: pointer;
+    transition: 0.4s ease;
+}
+
+.custom-blue-button:hover {
+    color:cornflowerblue;
+}
+
+.progress-bar-hover {
+    cursor: pointer;
+    transition: all 0.4s linear;
+}
+
+.progress-bar-hover:hover {
+    color: #FFF;
+    background-color: #C8E3FF;
+}
+
+.progress-bar-hover-disabled {
+    pointer-events:none !important;
+}
