--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2083,7 +2083,7 @@ textarea::-webkit-scrollbar-thumb {
 	box-shadow: 0 0 5px .5px #888888;
 	padding: 30px;
 	border-radius: 10px;
-    height: 200px;
+    min-height: 200px;
 }
 
 .product-list a{
