--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,7 +32,9 @@ ul{
 }
 .mg-10{
     margin-top: 200px;
-}
+}.mg-11{
+    margin-top:40px;
+ }
 .assets-string{
     background: #adc973;
 }
@@ -2097,6 +2099,9 @@ textarea::-webkit-scrollbar-thumb {
     border: 1.75px solid #82a9f8 !important;
 
 }
+.select-size{
+    width: 70% !important;
+}
 .attr-text{
     border-bottom: 1.75px solid #dee2e6;
     height: 35px;
@@ -2143,7 +2148,7 @@ textarea::-webkit-scrollbar-thumb {
     color: cornflowerblue;
 }
 .marg-left{
-    margin-left: 720px;
+    margin-left:720px;
 }
 .marg{
         margin-left:50px;
@@ -2186,6 +2191,17 @@ textarea::-webkit-scrollbar-thumb {
     grid-template-columns: 2fr 2fr;
     grid-gap: 20px;
 }
+.flex{
+    display: flex;
+    justify-content: center;
+}
+
+.width-70{
+    width:70%!important;
+}
+. width-50{
+    width:50%!important;
+}
 
 @media (max-width: 992px) {
     .agr-block {
@@ -2193,6 +2209,56 @@ textarea::-webkit-scrollbar-thumb {
         grid-template-columns: 2fr;
         grid-gap: 20px;
     }
+}
+@media (max-width: 500px){
+    .agreement-block{
+        padding: 10px;
+        barder-radius:5px;
+
+    }
+    .flex-center {
+        display: flex;
+        justify-content: center;
+    }
+    .mg-11{
+        margin-top: 10px;
+        margin-left: 10px;
+
+    }
+
+    .select-size{
+       width:100%!important;
+    }
+    .width-checkbox{
+        width:5% !important;
+    }
+    .col-md-12{
+        width: 90%!important;
+    }
+    .w-70{
+        width:100%!important;
+    }
+    .marg-btn {
+    margin-top:10px;
+    }
+    . width-50{
+        width:70%!important;
+}
+    .div-width{
+        width: 95%!important;
+    }
+    .width-70{
+        width:80%!important;
+    }
+    .flex-column{
+        display:flex;
+        flex-direction:column;
+
+    }
+    .w-100{
+        width:100%!important;
+    }
+
 }
 
 .quotation-list .pagination {
