--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -309,3 +309,11 @@ $light-off-opacity: 0.4;
 #products-nav li a.item{width:185px}
 
 ul{padding:0; margin:0}
+
+.childs-not-bold h4, .childs-not-bold label {
+  font-weight: 300;
+}
+
+.childs-not-bold h4.bold, .childs-not-bold label.bold {
+  font-weight: 500;
+}
