Сделал онлайн предосмотр (Migration)

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2091,3 +2091,7 @@ textarea::-webkit-scrollbar-thumb {
 .input7-size{
 	min-width: 176px;
 }
+
+.white-space {
+    white-space: unset !important;
+}
