--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2082,16 +2082,18 @@ textarea::-webkit-scrollbar-thumb {
 	min-width: 176px;
 }
 .date-products{
-	border-bottom: 1px solid #dee2e6;
+	border-bottom: 1px solid #82a9f8;
 	border-top: 0;
 	border-left: 0;
 	border-right: 0;
 	height: 35px;
 	background: white;
 }
+
 .custom-select{
-	height: 35px !important;
-	border: 1.75px solid #dee2e6 !important;
+    height: 35px !important;
+    border: 1.75px solid #82a9f8 !important;
+
 }
 .attr-text{
 	border-bottom: 1.75px solid #dee2e6;
@@ -2100,10 +2102,11 @@ textarea::-webkit-scrollbar-thumb {
 	color: black;
 }
 .attr-input-text{
-	outline: 0;
-	border-width: 0 0 2px;
-	border-color: #dee2e6;
-	height: 35px;
+    outline: 0;
+    border-width: 0 0 2px;
+    border-color: #82a9f8;
+    height: 35px;
+
 }
 .add-button{
 	cursor : pointer;
@@ -2146,6 +2149,14 @@ textarea::-webkit-scrollbar-thumb {
     grid-template-columns: 2fr 2fr;
     grid-gap: 20px;
 }
+.marg-t{
+    margin-top: 20%;
+}
+.btn-size{
+    width:20%;
+}
+.select-size{
+    width: 70% !important;
 
 @media (max-width: 992px) {
     .agr-block {
@@ -2154,6 +2165,64 @@ textarea::-webkit-scrollbar-thumb {
         grid-gap: 20px;
     }
 }
+@media (max-width: 500px){
+    .agreement-block{
+        padding: 10px;
+        barder-radius:5px;
+
+    }
+    .flex-center {
+        display: flex;
+        justify-content: center;
+    }
+    .marg-t{
+        margin-top: 10%;
+    }
+    .mg-11{
+        margin-top: 10px;
+        margin-left: 10px;
+
+    }
+
+    .select-size{
+        width:100%!important;
+    }
+    .width-checkbox{
+        width:5% !important;
+    }
+    .col-md-12{
+        width: 90%!important;
+    }
+    .w-70{
+        width:100%!important;
+    }
+
+    .marg-btn {
+        margin-top:10px;
+    }
+    . width-50{
+        width:70%!important;
+    }
+    .div-width{
+        width: 95%!important;
+    }
+    .btn-size{
+        width:20%;
+    }
+    .width-70{
+        width:80%!important;
+    }
+    .flex-column{
+        display:flex;
+        flex-direction:column;
+
+    }
+    .w-100{
+        width:100%!important;
+    }
+
+}
+
 
 .quotation-list .pagination {
 	display:inline-flex;
