--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1556,6 +1556,7 @@ body {
      margin-top: 15px;
  }
 
+
 .coordination-none-text{
 	font-weight: bold;
 	text-align: center;
@@ -1666,6 +1667,7 @@ body {
 	.ml-0-contain div{
 		margin-left: 0 !important;
 	}
+
 	.ad-dealer-raiting-ml-2-800 div:nth-of-type(2){
 		margin-left: 2rem;
 	}
@@ -1876,10 +1878,19 @@ textarea::-webkit-scrollbar-thumb {
     display:flex;
     justify-content: center;
 }
+.div-ml{
+    margin-left: 5%;
+}
+.div-mr{
+    margin-right: 5%;
+}
+
 .div-downmar{
     margin-bottom: 20px;
 }
-
+.md-7{
+    margin-top: 10px;
+}
 
 /*Colleagues page*/
 .colleagues-section {
@@ -2095,6 +2106,28 @@ textarea::-webkit-scrollbar-thumb {
     border: 1.75px solid #82a9f8 !important;
 
 }
+.ml-l2{
+margin-left:2rem;
+}
+
+.cus-select {
+    display: inline-block;
+    max-width: 100%;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 1.75rem 0.375rem 0.75rem;
+    line-height: 1.25;
+    color: #495057;
+    vertical-align: middle;
+    background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23333' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
+    background-size: 8px 10px;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 0.25rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    height: 35px !important;
+    border: 1.75px solid #82a9f8 !important;
+}
 .attr-text{
 	border-bottom: 1.75px solid #dee2e6;
 	height: 35px;
@@ -2105,7 +2138,7 @@ textarea::-webkit-scrollbar-thumb {
     outline: 0;
     border-width: 0 0 2px;
     border-color: #82a9f8;
-    height: 35px;
+    height: px;
 
 }
 .add-button{
@@ -2156,15 +2189,78 @@ textarea::-webkit-scrollbar-thumb {
     width:20%;
 }
 .select-size{
-    width: 70% !important;
+    width: 90% !important;}
 
-@media (max-width: 992px) {
-    .agr-block {
-        display: grid;
-        grid-template-columns: 2fr;
-        grid-gap: 20px;
+.text-hw{
+    height: 40%;
+
+
+}
+.text-flex{
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.text-f{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+}
+.font-shif{
+    font-family:"Arial" !important
+}
+.w-70{
+    width: 80%;
+}
+.wid-50{
+    width: 50%;
+}
+
+.flex-attr{
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+
+@media (max-width: 1398px) {
+    .text-hw{
+        height: 45%;
+        width: 100%;
     }
 }
+
+
+
+@media(max-width: 1228px){
+    .w-70{
+        width:80%;
+    }
+    .text-hw{
+        width: 100%;
+    }
+
+}
+@media(max-width: 622px){
+    .text-hw{
+        width:90%;
+    }
+    .flex-col-str {
+        flex-direction: column;
+        justify-content: center;
+
+    }
+}
+.col-md{
+
+    width: 70%;
+
+}
+
+
 @media (max-width: 500px){
     .agreement-block{
         padding: 10px;
@@ -2173,7 +2269,8 @@ textarea::-webkit-scrollbar-thumb {
     }
     .flex-center {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
     }
     .marg-t{
         margin-top: 10%;
@@ -2194,7 +2291,7 @@ textarea::-webkit-scrollbar-thumb {
         width: 90%!important;
     }
     .w-70{
-        width:100%!important;
+        width:70%!important;
     }
 
     .marg-btn {
@@ -2206,8 +2303,10 @@ textarea::-webkit-scrollbar-thumb {
     .div-width{
         width: 95%!important;
     }
+
+
     .btn-size{
-        width:20%;
+        width:150px!important;
     }
     .width-70{
         width:80%!important;
@@ -2220,8 +2319,68 @@ textarea::-webkit-scrollbar-thumb {
     .w-100{
         width:100%!important;
     }
+    .flex-col-str {
+        flex-direction: column;
+        justify-content: center;
+
+    }
+
+    .marg-l{
+        margin-left: 5%;
+    }
+
 
 }
+@media (max-width: 1062px) {
+    .text-hw{
+        height: 50%;
+        width: 110%;
+        font-size:14px;
+    }
+    .w-70{
+        width: 80%;
+    }
+    .flex-center {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .flex-col-str {
+        flex-direction: column;
+        justify-content: center;
+
+    }
+}
+@media (max-width: 500px) {
+    .text-hw{
+        width: 100%;
+        font-size:12px;
+    }
+
+}
+@media (max-width: 992px) {
+    .agr-block {
+        display: grid;
+        grid-template-columns: 2fr;
+        grid-gap: 20px;
+    }
+    .flex-center {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .text-hw{
+        font-size:12px;
+    }
+    .flex-col-str {
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+
+    }
+
+}
+
 
 
 .quotation-list .pagination {
