--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1110,6 +1110,7 @@ ul{
     display: flex;
     flex-flow: row;
 }
+
 /*Конец стилей страницы входа*/
 /*Начало главной страницы новостей*/
 .header{
@@ -2112,7 +2113,25 @@ textarea::-webkit-scrollbar-thumb {
 
 .cus-select {
     display: inline-block;
-    max-width: 100%;
+    max-width:90%;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 1.75rem 0.375rem 0.75rem;
+    line-height: 1.25;
+    color: #495057;
+    vertical-align: middle;
+    background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23333' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
+    background-size: 8px 10px;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 0.25rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    height: 35px !important;
+    border: 1.75px solid #82a9f8 !important;
+}
+.cus-sel {
+    display: inline-block;
+    max-width: 40%;
     height: calc(2.25rem + 2px);
     padding: 0.375rem 1.75rem 0.375rem 0.75rem;
     line-height: 1.25;
@@ -2138,7 +2157,7 @@ textarea::-webkit-scrollbar-thumb {
     outline: 0;
     border-width: 0 0 2px;
     border-color: #82a9f8;
-    height: px;
+    height: 30%;
 
 }
 .add-button{
@@ -2195,6 +2214,10 @@ textarea::-webkit-scrollbar-thumb {
     height: 40%;
 
 
+}
+
+.text-w{
+    width: 160px;
 }
 .text-flex{
     display:flex;
