--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -317,3 +317,11 @@ ul{padding:0; margin:0}
 .childs-not-bold h4.bold, .childs-not-bold label.bold {
   font-weight: 600;
 }
+.day-indicator {
+  &.is-before {
+    background-color: wheat;
+  }
+  &.today {
+    background-color: #f4b454;
+  }
+}
