--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -319,9 +319,8 @@ ul{padding:0; margin:0}
 }
 .day-indicator {
   &.is-before {
-    background-color: wheat;
   }
   &.today {
-    background-color: #f4b454;
+    background-color: #b2f4f4;
   }
 }
