--- a/public/css/admin_head.css
+++ b/public/css/admin_head.css
@@ -43,13 +43,34 @@ body {
 
 .nnavbar-brand:hover{
     color: #00ff3a;
-    display: inline-block;
-    padding-top: 0.3125rem;
-    padding-bottom: 0.3125rem;
-    margin-right: 1rem;
-    font-size: 1.25rem;
-    line-height: inherit;
-    white-space: nowrap;
+}
+
+.nav-nav {
+    color: white;
+    display: block;
+    padding: 0.5rem 1rem;
+}
+
+.navbar-nav .nav-nav {
+    padding-right: 0;
+    padding-left: 0;
+}
+
+.navbar-expand-lg .navbar-nav .nav-nav {
+    padding-right: .5rem;
+    padding-left: .5rem;
+}
+
+.nav-nav:focus, .nav-nav:hover {
+    text-decoration: none;
+}
+
+.nav-nav:hover {
+    color: #03A9F4;
+}
+
+.nav-link.disabled {
+    color: rgba(2, 150, 5, 0.55);
 }
 
 .table-data{
