--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -34,7 +34,7 @@
 | Layouts
 |--------------------------------------------------------------------------
  */
-
+@import "./layout/header";
 
 /*
 |--------------------------------------------------------------------------
