--- a/resources/sass/base/_global.scss
+++ b/resources/sass/base/_global.scss
@@ -1,9 +1,13 @@
 html {
     height: 100%;
+    box-sizing: border-box;
 }
 
 body {
     height: 100%;
+    background-color: $base-color;
+    color: $base-color-dark;
+    //font-family: "", sans-serif;
 }
 
 img {
@@ -13,8 +17,25 @@ img {
 
 a {
     text-decoration: none;
+    color: $base-color-dark;
+}
+
+a:link {
+    text-decoration: none;
 }
 
 ul {
     list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    padding: 0;
+    margin: 0;
+}
+
+span {
+    margin: 0;
+    padding: 0;
 }
