--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -1,9 +1,18 @@
 @font-face {
     font-family: 'Bicubik Regular';
-    src: url('../fonts/bicubik/bicubik_regular.eot'); /* IE 9 Compatibility Mode */
-    src: url('../fonts/bicubik/bicubik_regular.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
-    url('../fonts/bicubik/bicubik_regular.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/bicubik/bicubik_regular.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
-    url('../fonts/bicubik/bicubik_regular.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/bicubik/bicubik_regular.svg#bicubik_regular') format('svg'); /* Chrome < 4, Legacy iOS */
+    src: url('../../fonts/bicubik/bicubik_regular.eot'); /* IE 9 Compatibility Mode */
+    src: url('../../fonts/bicubik/bicubik_regular.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+    url('../../fonts/bicubik/bicubik_regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../../fonts/bicubik/bicubik_regular.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+    url('../../fonts/bicubik/bicubik_regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../../fonts/bicubik/bicubik_regular.svg#bicubik_regular') format('svg'); /* Chrome < 4, Legacy iOS */
+}
+
+@font-face {
+    font-family: 'Euclid Flex Regular';
+    src: url('../../fonts/euclidflex/euclidflex_regular.woff2') format('woff2'),
+    url('../../fonts/euclidflex/euclidflex_regular.woff') format('woff'),
+    url('../../fonts/euclidflex/euclidflex_regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
 }
