--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -4,6 +4,9 @@
 |--------------------------------------------------------------------------
  */
 @import "~@fortawesome/fontawesome-free/scss/fontawesome",
+        "~@fortawesome/fontawesome-free/scss/brands",
+        "~@fortawesome/fontawesome-free/scss/regular",
+        "~@fortawesome/fontawesome-free/scss/solid",
         "~bootstrap/scss/bootstrap";
 
 /*
