--- a/resources/sass/abstract/_variables.scss
+++ b/resources/sass/abstract/_variables.scss
@@ -1,4 +1,4 @@
 $base-color         : #F8F8F8;
 $base-color-dark    : #333;
-$color-red          : #ff4b54;
+$color-red          : #FF4B54;
 $color-orange       : #FFCA3D;
