--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2750,3 +2750,19 @@ textarea::-webkit-scrollbar-thumb {
 .quality{
     margin-left: 20px;
 }
+
+.d-player-video-wrap {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.d-player-video-wrap.d-player-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
